package pt.trekio.misc

enum class UserRank {
    NEW,
    VERIFIED,
}
