@startuml
hide empty members
hide circles

enum UserRank {
    NEW
    VERIFIED
}

class User {
    id: unsigned long
    username: Username
    email: Email
    passwordValidInfo: string?
}

class Token {
    validationInfo: string
    expiredAt: Instant
}

class Point {
    latitude: Double
    longitude: Double
}

enum TrailDifficulty {
    BEGINNER
    INTERMEDIATE
    ADVANCED
}

class Trail {
    id: unsigned long
    name: TrailName
    path: List<Point>
}

class Hike {
    id: unsigned long
    time: Instant
}

User o-left UserRank : rank
User *- "1" Token : token
User --* Trail : creator
User --* Hike : hiker
Trail *-- "2" Point : "start, end"
Trail o-- TrailDifficulty : difficulty
Trail o-- "*" Hike : hikes
Trail "?" --o Trail : parentTrail
Hike *- "2" Point : "entry, exit"

@enduml
